# django-permissions-policy

./: .coverage  .gitignore  .travis.yml  .typos.toml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  django_feature_policy.py  pyproject.toml  pytest.ini  requirements-compile.sh  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini  update_feature_names.py
.github/workflows/: main.yml
requirements/: compile.py  compile.sh  py310-django32.txt  py310-django40.txt  py35-django111.txt  py35-django20.txt  py35-django21.txt  py35-django22.txt  py36-django111.txt  py36-django20.txt  py36-django21.txt  py36-django22.txt  py36-django30.txt  py36-django31.txt  py36-django32.txt  py37-django111.txt  py37-django20.txt  py37-django21.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py39-django22.txt  py39-django30.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt  requirements.in
src/: django_feature_policy.py  django_permissions_policy.py
src/django_permissions_policy/: __init__.py  decorators.py
tests/: settings.py  test_decorators.py  test_django_feature_policy.py  test_django_permissions_policy.py
tests/testapp/: settings.py  urls.py  views.py
