[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
known_first_party = django_feature_policy
known_third_party = django
line_length = 88
multi_line_output = 3
not_skip = __init__.py
use_parentheses = True

[metadata]
license_file = LICENSE

[tool:multilint]
paths = django_feature_policy.py
        setup.py
        runtests.py
        tests

[coverage:run]
branch = True
