[metadata]
name = django-feature-policy
version = 3.3.0
description = Set the draft security HTTP header Feature-Policy on your Django app.
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/django-feature-policy
project_urls =
    Changelog = https://github.com/adamchainz/django-feature-policy/blob/master/HISTORY.rst
license = ISC
keywords = Django
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = django_feature_policy
include_package_data = True
install_requires = Django>=2.0
python_requires = >=3.5
zip_safe = False

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
known_first_party = django_feature_policy
known_third_party = django
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    setup.py
    src
    tests

[coverage:run]
branch = True
